--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>David Nunes - Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Welcome to my portfolio website! I am a second-year computer science student seeking employment or internships. Browse my projects and skills to learn more about me." name="description">
+  <meta name="keywords" content="computer science, student, portfolio, projects, skills, employment, internships, coding, programming, web development">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
